# shuttlings-cch24

./: .env  Cargo.toml  README.md  Shuttle.toml
.github/workflows/: shuttle.yml
.sqlx/: query-90b1a6c434b6817aeb1c5e7f12eb580fc057953c6e77643e7d4ed974bd1dd0f5.json  query-b5d42edb65b6fb18315b3eaae087150a7f204c4a962f8950ab72e2f588641a81.json  query-b86bade4435b3bea2f6bae8ec52e871732a63b103474234e98f4ce0f485f89d0.json
scripts/: init_db.sh
src/: day02.rs  day05.rs  day09.rs  day12.rs  day16.rs  day19.rs  day23.rs  day_minus_1.rs  lib.rs  main.rs
