[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.95"
cargo-manifest = "0.17.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.134"
shuttle-actix-web = "0.49.0"
shuttle-runtime = { version = "0.49.0", default-features = false }
tokio = "1.26.0"
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
