[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.95"
cargo-manifest = "0.17.0"
chrono = { version = "0.4.39", features = ["serde"] }
jsonwebtoken = "9.3.0"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.134"
shuttle-actix-web = "0.49.0"
shuttle-runtime = { version = "0.49.0", default-features = false }
shuttle-shared-db = { version = "0.49.0", features = ["sqlx", "postgres"] }
sqlx = { version = "0.8.2", features = ["uuid", "chrono"] }
tokio = "1.26.0"
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4"] }
